Added upgradeable castle
Using ascii to represent player owned castle.
ascii converted to SVG and rendered as img src.

Signed-off-by: andreash <andreas.hogberg5@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.ascii-art {
+  font-family: monospace;
+  white-space: pre;
+  color: blue;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
